major app disign changes

--- a/src/static/stylus/app.module.styl
+++ b/src/static/stylus/app.module.styl
@@ -7,5 +7,12 @@
     display flex
     width 100vw 
     height calc(100vh - 48px)
-    background-color cwhite2
     overflow hidden
+    background-color white06
+    & ~ canvas
+        position absolute
+        left 0px
+        top 0px
+        width 100vw
+        height 100vh
+        z-index -10
