--- a/src/static/stylus/formElements.module.styl
+++ b/src/static/stylus/formElements.module.styl
@@ -4,9 +4,13 @@
     position relative
     height 42px
     border-radius 6px
-    background-color cgray2
+    background-color cwhite1
+    box-sizing border-box
+    border 2px solid rgba(0,0,0,0)
+    &:focus-within
+        border 2px solid corange2
     & > input
-        margin-top 5px
+        margin-top 4px
         height 32px
         width calc(100% - 44px)
         text-indent 10px
@@ -16,7 +20,7 @@
         display block
         position absolute
         right 6px
-        top 6px
+        top 5px
         height 30px
         width 30px
         cursor pointer
@@ -41,18 +45,20 @@
         padding 10px   
         text-indent 15px
         cursor pointer
-        background-color cgray2
+        background-color cwhite1
         text-align left
         font-weight 300
         font-size 16px
     & > :nth-child(2)
         position absolute
-        height 200px
+        max-height 200px
         overflow scroll
         width 100%
         z-index 102
         border-bottom-left-radius 6px 
         border-bottom-right-radius 6px 
+        box-shadow shadow1
+        background-color cwhite1
         & > button 
             cursor pointer
             display block
@@ -65,10 +71,10 @@
             width 100%
             height 42px
             padding 10px  
-            background-color cgray2
+            background-color cwhite1
             border-top 1px solid cgray3
             &:hover
-                background-color cgray3
+                background-color corange1
         & > :last-child
             border-bottom-left-radius 6px 
             border-bottom-right-radius 6px 
@@ -85,17 +91,21 @@
     label 
         cursor pointer
         input
-            background-color cgray2
+            background-color cwhite1
             border-radius 6px
             text-align right
             position absolute
-            width 42px
+            width 63px
             height 42px
             left 0
             top 50%
             transform translate(0, -50%)
+            box-sizing border-box
+            border 2px solid rgba(0,0,0,0)
+            &:focus
+                border 2px solid corange2
         div
-            margin-left 54px
+            margin-left 73px
 
 .checkbox
     position relative
@@ -107,6 +117,9 @@
             left 15px
             top 50%
             transform translate(0, -50%)
+            border 2px solid rgba(0,0,0,0)
+            &:focus
+                outline 2px solid corange2
         div
             margin-left 54px
 .button
@@ -114,12 +127,16 @@
     font-size 14px
     font-weight 600
     cursor pointer
-    padding 10px 0px
+    padding 3px 0px
     margin-right 18px
     text-align center
     border-radius 6px 
     outline none
-    border none
+    border 2px solid rgba(0,0,0,0)
+    box-sizing border-box
+    &:focus
+        border 2px solid corange2
+        background-color cwhite1
     &:hover
         background-color corange2
     &:disabled
