--- a/src/static/stylus/lobby.module.styl
+++ b/src/static/stylus/lobby.module.styl
@@ -2,38 +2,33 @@
 .lobby
     flex 1 0
     height 100%
-    background-image url("../img/paper.svg")
-    background-size 20px 20px
-    background-repeat repeat
-    background-position center
-    & > .header
+    & > :nth-child(1)
         margin 10px
-.header
-    display flex
-    @media all and (max-width: 600px) 
-        flex-wrap wrap
-    & > *
-        display inline-block
-        margin 10px
-    & > :nth-child(1) //search input
-        flex 1 1
-        @media all and (max-width: 600px)
-            order 4
-            flex 1 1 100% 
-    & > :nth-child(2) //connect by id input
-        flex 0 0 200px
+        display flex
         @media all and (max-width: 600px) 
-            flex 1 0 100px
-    & > :nth-child(3) //button "create room"
-        flex 0 0 152px
-        margin-right 18px
-.body
-    position relative
-    height calc(100% - 40px)
-    overflow scroll
-    scrollbar-width thin
-    & > .item
-        margin 0px 20px 20px
+            flex-wrap wrap
+        & > *
+            display inline-block
+            margin 10px
+        & > :nth-child(1) //search input
+            flex 1 1
+            @media all and (max-width: 600px)
+                order 4
+                flex 1 1 100% 
+        & > :nth-child(2) //connect by id input
+            flex 0 0 200px
+            @media all and (max-width: 600px) 
+                flex 1 0 100px
+        & > :nth-child(3) //button "create room"
+            flex 0 0 152px
+            margin-right 18px
+    & > :nth-child(2)
+        position relative
+        height calc(100% - 40px)
+        overflow scroll
+        scrollbar-width thin
+        & > .item
+            margin 0px 20px 20px
 
 .item
     border-radius 5px
