--- a/src/static/stylus/popup.module.styl
+++ b/src/static/stylus/popup.module.styl
@@ -9,3 +9,6 @@
     background-color rgba(0, 0, 0, 0.6)
     cursor default
     z-index 400
+    & > :nth-child(1) > :nth-child(1)
+        @media all and (max-width 810px)
+            top 58px
