--- a/src/static/stylus/topbar.module.styl
+++ b/src/static/stylus/topbar.module.styl
@@ -1,4 +1,16 @@
 @require 'common.styl'
+
+
+Underline = 
+    position absolute
+    content ''
+    bottom 0
+    left 0
+    width 100%
+    height 3px
+    background-color cblack1
+    border-radius 3px
+
 .topbar
     position absolute 
     left 0px
@@ -7,11 +19,21 @@
     height 48px
     box-shadow shadow1
     z-index 300
-    background-color corange1
     text-align center
-    color cblack3
     user-select none
-    @media all and (min-width 521px) and (max-width 1010px)
+    font-weight 500
+    @media all and (max-width 560px)
+        &.displayMenu
+            background-color rgba(255,255,255,0.8)
+            & > :nth-child(1) > :nth-child(2)
+                display block
+                & > *:hover
+                    color corange1
+            & > :nth-child(2):hover
+                color corange1
+                &:after 
+                    display none
+    @media all and (min-width 561px) and (max-width 1010px)
         text-align left
     & > div
         display inline-block
@@ -21,39 +43,36 @@
         position absolute
         left 10px 
         top 0px
-        @media all and (min-width 521px) and (max-width 1010px)
+        @media all and (min-width 561px) and (max-width 1010px)
             position relative
             z-index 301
-        @media all and (max-width 520px)
+        @media all and (max-width 560px)
             left 0
         & > :nth-child(1) //Icon gamburger
             display none
             left 3px
             top 3px
             border-radius 6px
+            border 2px solid rgba(0,0,0,0)
             {IconMedium}
-            & > :nth-child(1) > :nth-child(2)
-                fill cblack3
-            @media all and (max-width 520px)
+            @media all and (max-width 560px)
                 display block
                 &:hover
-                    background-color corange2
-                    & > svg > :nth-child(2)
-                        fill cblack1
+                    border 2px solid corange1
+                    background-color cwhite1
         & > :nth-child(2) //Container links
             display inline-block
             & > *
+                position relative
                 display inline-block
                 box-sizing border-box
                 padding 12px
                 font-size 20px
                 height 48px
                 width auto
-                color cblack3
-                &:hover
-                    border-bottom 3px solid black
-                    color cblack1
-            @media all and (max-width 520px)
+                &:hover:after
+                    {Underline}
+            @media all and (max-width 560px)
                 display none
                 position absolute
                 left 0px
@@ -61,33 +80,32 @@
                 width 100vw
                 & > *
                     display block
-                    background-color corange1
+                    background-color white06
+                    backdrop-filter: blur(10px)
                     border-top 1px solid 
                     border-color cblack3
                     &:hover
-                        background-color corange2
-                        border-bottom none
+                        &:hover:after
+                            display none
                 & > :last-child
                     border-bottom-left-radius 6px
                     border-bottom-right-radius 6px
                     border-bottom 1px solid 
                     border-color cblack3
-                &.topbarMenuDisplay
-                    display block
 
 
     & > :nth-child(2) //center item (namual + game name)
+        position relative
         padding 12px
         font-size 20px
         height 100%
         box-sizing border-box
         cursor pointer
-        @media all and (max-width 700px)
-            & > span:nth-of-type(2)
+        @media all and (max-width 760px)
+            & > span:nth-of-type(1)
                 display none
-        &:hover
-            border-bottom 3px solid black
-            color cblack1
+        &:hover:after
+            {Underline}
 
     & > :nth-child(3) //user settings
         position absolute
@@ -95,15 +113,18 @@
         top 0
         height 48px
         min-width 42px
-        transition 1s background-color
         padding 4px 48px 0px 8px
         box-sizing border-box
         cursor pointer
         text-align right
+        &:hover:after
+            {Underline}
         @media all and (max-width 1010px)
             padding 0
             & > :nth-child(1),
             & > :nth-child(2)
+                display none
+            &:hover:after
                 display none
         & > :nth-child(1) //userId
             margin-top 4px
@@ -118,15 +139,9 @@
             top 3px
             border-radius 6px
             {IconMedium}
-            &:hover
-                background-color corange1
-            @media all and (max-width 520px)
+            border 2px solid rgba(0,0,0,0)
+            @media all and (max-width 1010px)
                 &:hover
-                    background-color corange2
-            & > svg > :nth-child(2)
-                fill cblack3
-    & > :nth-child(3):hover > div
-        color cblack1
-        & > :nth-child(1) > :nth-child(2)
-            fill cblack1
+                    background-color cwhite1
+                    border 2px solid corange1
         
