add canvas gradien backgrount on main page

--- a/src/static/stylus/alert.module.styl
+++ b/src/static/stylus/alert.module.styl
@@ -16,7 +16,7 @@
         margin 14px
         border-radius 21px
         line-height 42px
-        background-color cgray1
+        background-color cwhite1
         max-width 600px
         text-align center
         display inline-block
