main page moz scroll optimize

--- a/src/static/stylus/main.module.styl
+++ b/src/static/stylus/main.module.styl
@@ -83,6 +83,7 @@
         border-top-left-radius 0px
     & > div
         overflow scroll
+        scrollbar-width none
         @media all and (max-width 1160px)
             white-space normal
             text-align center
