add html semantic, optimization for SE, change routing manuals

--- a/src/static/stylus/topbar.module.styl
+++ b/src/static/stylus/topbar.module.styl
@@ -35,7 +35,7 @@ Underline =
                     display none
     @media all and (min-width 561px) and (max-width 1010px)
         text-align left
-    & > div
+    & > *
         display inline-block
         cursor pointer
 
