--- a/src/static/stylus/manual.module.styl
+++ b/src/static/stylus/manual.module.styl
@@ -11,6 +11,7 @@
     padding 40px 
     scrollbar-width thin
     background-color cwhite3
+    z-index 501
     @media all and (max-width 1090px)
         width calc(100vw - 10px)
         left 5px
