--- a/src/static/stylus/roomInfo.module.styl
+++ b/src/static/stylus/roomInfo.module.styl
@@ -10,6 +10,7 @@
     border-radius 0px
     background-color cwhite3
     box-shadow shadow2
+    z-index 501
     @media all and (max-width 810px)
         width calc(100vw - 10px)
         left 5px
