--- a/src/static/stylus/alert.module.styl
+++ b/src/static/stylus/alert.module.styl
@@ -25,6 +25,7 @@
         text-overflow ellipsis
         overflow hidden
         padding 0px 10px 0px 10px
+        cursor pointer
     &.alertDisplay
         visibility visible
         opacity 1
