--- a/src/static/stylus/lobby.module.styl
+++ b/src/static/stylus/lobby.module.styl
@@ -115,7 +115,8 @@
                 position absolute
                 top 8px
                 right 8px
-                width 132px
+                width 152px
+                height 42px
                 margin-right 0px
                 & > :nth-child(2)
                     display none
