--- a/src/static/stylus/canvas.module.styl
+++ b/src/static/stylus/canvas.module.styl
@@ -8,7 +8,7 @@
     width calc(100% - 340px)
     overflow scroll
     text-align center
-    scrollbar-width thin
+    scrollbar-width none
     @media all and (max-width 940px)
         width 100%
         height calc(100% - 170px)
