--- a/src/static/stylus/score.module.styl
+++ b/src/static/stylus/score.module.styl
@@ -17,14 +17,13 @@
         display flex
         position sticky
         top 0px
-        background-color cwhite2
         height 25px
         font-size 16px
-        color cgray1
+        color cblack4
         z-index 1000
+        backdrop-filter blur(10px)
         & > div
             text-align center
-            background-color cwhite2
         & > :nth-child(1)
             margin-left 35px 
             flex 0 0 100px
