--- a/src/static/stylus/room.module.styl
+++ b/src/static/stylus/room.module.styl
@@ -6,6 +6,10 @@
     display block
     position relative
     overflow hidden
+    & > button
+        height 42px
+        width 340px
+        margin 40px
 .match
     height 100%
     position relative
@@ -25,6 +29,7 @@
     text-align center
     font-size 14px 
     padding 10px   
+    box-sizing border-box
     background-color corange1
     &:hover
         background-color corange2
@@ -46,5 +51,6 @@
             display block //Show icon instead text
             & > :nth-child(2)
                 fill cwhite1
+
         
 
