--- a/src/static/stylus/sapper.module.styl
+++ b/src/static/stylus/sapper.module.styl
@@ -1,11 +1,12 @@
 @require 'common.styl'
 .button
     position absolute
-    top 40px
+    top 70px
     right 14px
     height 70px
 
     z-index 101
+    box-sizing content-box
     user-select none
     {IconBig}
     &.highlite
