--- a/src/static/stylus/roomInfo.module.styl
+++ b/src/static/stylus/roomInfo.module.styl
@@ -89,5 +89,6 @@
                 height auto
             & > *
                 margin 10px 0px 10px 20px
+                height 42px
                 width 240px
             
