fix alerts about explode for all players

--- a/src/static/stylus/sapper.module.styl
+++ b/src/static/stylus/sapper.module.styl
@@ -8,6 +8,9 @@
     z-index 101
     box-sizing content-box
     user-select none
+    background-repeat no-repeat
+    background-size 42px 42px
+    background-image url('../img/Minesweeper/bomb.png')
     {IconBig}
     &.highlite
-        background-color yellow
+        background-image url('../img/Minesweeper/flag.png')
