--- a/src/static/stylus/index.styl
+++ b/src/static/stylus/index.styl
@@ -1,8 +1,8 @@
 @import url('https://rsms.me/inter/inter.css');
 @require 'common.styl'
 ::-webkit-scrollbar
-    width 4px
-    height 4px
+    width 0px
+    height 0px
 
 ::-webkit-scrollbar-thumb
     background none
@@ -21,6 +21,7 @@ body
     padding 0
     font-family Inter, sans-serif
     overflow hidden
+    scrollbar-width thin
 
 a
     display block
