--- a/src/static/stylus/main.module.styl
+++ b/src/static/stylus/main.module.styl
@@ -1,4 +1,5 @@
 @require 'common.styl'
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
 .main
     height 100vh
     overflow scroll
@@ -12,32 +13,36 @@
         height 100vh
 .header
     position absolute
-    left 6vw
-    top 6vw
+    left 5vw
+    top 5vw
     color #fff
     width 35vw
     z-index 100
-    animation headerLeftA 2s
+    animation headerA 2s
     @media all and (max-width 1160px)
         width calc(100vw - 60px)
         position relative
         top auto 
         left auto
         margin 30px
+        width 55vw
+    @media all and (max-width 580px)
+        width 90vw
     & > :nth-child(1)
-        font-size 56px
-        line-height 50px
         font-weight 800
+        font-size 54px
+        line-height 50px
         @media all and (max-width 1160px)
-            font-size 34px
-            line-height 30px
+            font-size calc(3vw + 20px)
+            line-height calc(3vw + 20px)
     & > :nth-child(2)
-        margin-top 20px
-        font-size 28px
-        line-height 28px
+        margin-top 30px
+        font-size 26px
+        line-height 26px
         @media all and (max-width 1160px)
-            font-size 24px
-@keyframes headerLeftA {
+            font-size calc(2vw + 10px)
+            line-height calc(2vw + 14px)
+@keyframes headerA {
     0% {
         margin-left -100px
         opacity 0
@@ -49,6 +54,16 @@
     right 0px
     width 65vw
     overflow hidden
+    animation imgA 2s 
+    &:after 
+        display none
+        content ''
+        position absolute
+        left 0
+        bottom 0
+        height 80px
+        width 100%
+        background linear-gradient(rgba(255,255,255,0), #fff)
     @media all and (max-width 600px)
         height 400px
     @media all and (max-width 1160px)
@@ -56,6 +71,8 @@
         position relative
         left auto 
         bottom auto
+        &:after 
+            display block
     & > svg 
         margin-bottom -5px
         @media all and (max-width 600px)
@@ -63,6 +80,12 @@
             width 600px
             left calc(50vw - 300px)
             bottom 0px
+@keyframes imgA {
+    0% {
+        margin-bottom -100px
+        opacity 0
+    }
+}
 .catalog
     white-space nowrap
     width calc(100vw - 300px)
@@ -74,6 +97,7 @@
     box-sizing border-box
     padding 0px 126px
     border-top-left-radius 100px
+    animation imgA 2s 
     @media all and (max-width 700px)
         padding 0
     @media all and (max-width 1160px)
@@ -81,6 +105,7 @@
         position relative
         height auto
         border-top-left-radius 0px
+        box-sizing border-box
     & > div
         overflow scroll
         scrollbar-width none
@@ -90,19 +115,26 @@
         & > div
             display inline-block
             margin 0px 5px
-            width 208px
+            width 190px
             position relative
+            &:first-child
+                margin-left 40px
+                @media all and (max-width 1160px)
+                    margin-left 5px
             & > :nth-child(1) //item
                 height 250px
+                padding 10px
+                box-sizing border-box
                 & > :nth-child(1)
                     width 100% 
-                    font-weight 700
                     text-align center
-                    font-size 20px
-                    height 42px
-                    line-height 42px
+                    font-size 40px
+                    height 60px
+                    font-family 'Great Vibes'
+                    line-height 60px
                 & > :nth-child(2)
-                    height 208px
+                    height 170px
+                    width 100%
     & > .arrowRight, 
     & > .arrowLeft
         display block
@@ -110,6 +142,7 @@
         width 60px
         height 60px
         cursor pointer
+        user-select none
         & > :nth-child(2)
             transition 1s fill
         &:hover > :nth-child(2) 
@@ -122,23 +155,42 @@
     & > .arrowRight
         right 30px
         bottom calc(50% - 30px)
+    &:before,
+    &:after
+        display block
+        content ''
+        position absolute
+        top 0
+        height 100%
+        width 40px
+        z-index 100
+        @media all and (max-width 1160px)
+            display none
+            
+    &:before
+        left 126px
+        background linear-gradient(90deg, #fff, rgba(255,255,255,0))
+    &:after
+        right 126px
+        background linear-gradient(-90deg, #fff, rgba(255,255,255,0))
 
 .footer
     color #fff
     position absolute
     bottom 20px
     left 20px
-    width 260px
+    width 200px
     height 130px
-    box-sizing border-box
     padding 20px 15px
-    animation footerDownA 2s 
+    box-sizing border-box
+    animation footerA 2s 
     @media all and (max-width 1160px)
         width 100vw
         position relative
         text-align center
         left auto 
         bottom auto
+        box-sizing border-box
     & > div
         margin-top 5px 
     &:before
@@ -148,7 +200,7 @@
         top 0
         border-radius 5px
         content ''
-        height 5px
+        height 3px
         width 100%
         background-color #fff
         @media all and (max-width 1160px)
@@ -156,7 +208,7 @@
             left 10px 
             width calc(100% - 20px)
     
-@keyframes footerDownA {
+@keyframes footerA {
     0% {
         bottom -100px
         opacity 0
