--- a/src/static/stylus/main.module.styl
+++ b/src/static/stylus/main.module.styl
@@ -3,7 +3,7 @@
 .main
     height 100vh
     overflow scroll
-    scrollbar-width thin
+    scrollbar-width none
     & > canvas
         position absolute
         left 0
@@ -105,7 +105,6 @@
         position relative
         height auto
         border-top-left-radius 0px
-        box-sizing border-box
     & > div
         overflow scroll
         scrollbar-width none
@@ -146,7 +145,7 @@
         & > :nth-child(2)
             transition 1s fill
         &:hover > :nth-child(2) 
-            fill red
+            fill corange1
         @media all and (max-width 1160px)
             display none
     & > .arrowLeft
