--- a/src/static/stylus/chat.module.styl
+++ b/src/static/stylus/chat.module.styl
@@ -7,98 +7,104 @@
     position relative
     width 340px
     height 100%
-    background-color white03
     backdrop-filter: drop-shadow(16px 16px 20px white) invert(10%) blur(10px)
     box-shadow shadow1
     z-index 201
     transition-duration 0.2s 
     transition-property right, opacity, transition
-    & > :nth-child(1)//header
-        flex 0 0 42px
+    & > :nth-child(1) //body+header
         display flex
-        border-bottom 1px solid oshadow
-        & > :nth-child(1),
-        & > :nth-child(3)
+        flex-direction column
+        flex 1 1 100px
+        background-color cwhite1
+        border-radius 6px
+        margin 14px 14px 0px 14px
+        & > :nth-child(1)//header
+            display flex
             flex 0 0 42px
-            height 100%
-            position relative
-            & > :nth-child(1)
-                left 6px
-                top 6px
-                border-radius 6px
-                {IconSmall}
-                    
-        & > :nth-child(1) > :nth-child(1) //Анимация ротации кнопки смены типа чата
-            & > svg
-                transition 0.5s
-                & > :nth-child(2)
-                    fill cblack3
-            & > .global
-                transform rotate(180deg)
-        & > :nth-child(2)//title
-            flex 1 1 232px
-            color cblack3
-            position relative
-            font-weight 700
+            border-bottom 1px solid oshadow
             & > :nth-child(1),
-            & > :nth-child(2)
-                text-transform uppercase
-                position absolute
-                left 0
-                font-size 14px
-                transition 0.5s
-                opacity 0
-                text-align center
-                width 100%
-                &.selected
-                    top 12px
-                    opacity 1
-            & > :nth-child(1)
-                top -20px
-            & > :nth-child(2)
-                top 40px
             & > :nth-child(3)
-                text-transform lowercase
-                position absolute
-                left 10px
-                bottom 0px
-        & > :nth-child(3)
-            visibility hidden
-            & > svg > :nth-child(2) 
-                fill cblack3
-            @media all and (max-width 1280px)
-                visibility visible
-            
-            
-    & > :nth-child(2)//body (messages)
-        height 100%
-        overflow-y scroll
-        scrollbar-width thin
-        & > div
-            padding 5px 18px
-            font-size 13px
-        & > .system
-            color cblack2
-        & > :not(.system)
-            & > :nth-child(1),
-            & > :nth-child(2)
+                flex 0 0 42px
+                height 100%
+                position relative
+                & > :nth-child(1)
+                    left 6px
+                    top 6px
+                    border-radius 6px
+                    {IconSmall}
+                        
+            & > :nth-child(1) > :nth-child(1) //Анимация поворота кнопки смены типа чата
+                & > svg
+                    transition 0.5s
+                    & > :nth-child(2)
+                        fill cblack3
+                & > .global
+                    transform rotate(180deg)
+            & > :nth-child(2)//title
+                flex 1 1 232px
                 color cblack3
-                font-weight 600
+                position relative
+                font-weight 700
+                & > :nth-child(1),
+                & > :nth-child(2)
+                    text-transform uppercase
+                    position absolute
+                    left 0
+                    font-size 14px
+                    transition 0.5s
+                    opacity 0
+                    text-align center
+                    width 100%
+                    &.selected
+                        top 12px
+                        opacity 1
+                & > :nth-child(1)
+                    top -20px
+                & > :nth-child(2)
+                    top 40px
+                & > :nth-child(3)
+                    text-transform lowercase
+                    position absolute
+                    left 10px
+                    bottom 0px
             & > :nth-child(3)
-                color cblack4
-    & > :nth-child(3)//input message
-        padding 14px 14px
+                visibility hidden
+                & > svg > :nth-child(2) 
+                    fill cblack3
+                @media all and (max-width 1280px)
+                    visibility visible
+                
+                
+        & > :nth-child(2)//body (messages)
+            overflow-y scroll
+            scrollbar-width thin
+            flex 1 1 100px
+            & > div
+                padding 5px 18px
+                font-size 13px
+            & > .system
+                color cblack2
+            & > :not(.system)
+                & > :nth-child(1),
+                & > :nth-child(2)
+                    color cblack3
+                    font-weight 600
+                & > :nth-child(3)
+                    color cblack4
+    & > :nth-child(2)//input message
+        padding 14px
         box-sizing border-box
 
     @media all and (max-width 1280px)
         opacity 0
         visibility hidden
         position absolute
-        height calc(100vh - 48px)
+        height 100%
         top 0px
         right -340px
     @media all and (max-width 500px)
-        width 100vw
+        width 100%
     &.chatDisplay
         @media all and (max-width 1280px)
             display flex
