--- a/src/static/stylus/room.module.styl
+++ b/src/static/stylus/room.module.styl
@@ -15,12 +15,18 @@
 .match
     height 100%
     position relative
-
+.info
+    position relative
+    bottom 70px
+    left 14px
+    z-index 2
+    height 42px
+    width 312px
+    
 .btnToLobby
     position absolute
     bottom 14px
     left 14px
-    width 220px
     z-index 2
     height 42px
     width 312px
