--- a/src/static/stylus/score.module.styl
+++ b/src/static/stylus/score.module.styl
@@ -1,27 +1,31 @@
 @require 'common.styl'
 
 .score
-    position absolute
+    position relative
     top 14px
     left 14px
     width 312px
     z-index 2
     overflow scroll
     scrollbar-width none
+    background-color cwhite1
+    border-radius 6px
+    padding 5px   
     @media all and (max-width 940px)
-        left 0px
+        left 10px
         top 10px
         width calc(100% - 94px)
-        height 135px
+        max-height 135px
     & > :nth-child(1) //header
         display flex
         position sticky
         top 0px
         height 25px
+        width 100%
         font-size 16px
         color cblack4
         z-index 1000
-        backdrop-filter blur(10px)
+        background-color cwhite1
         & > div
             text-align center
         & > :nth-child(1)
