fix ttt, backg leftbar, sending info about max players when creating room

--- a/src/static/stylus/leftbar.module.styl
+++ b/src/static/stylus/leftbar.module.styl
@@ -28,16 +28,16 @@
         & > div
             position relative
             border-radius 6px
-            width calc(100% - 4px)
-            margin 2px 2px
+            width 100%
+            margin 2px 0
             & div
                 padding 12px 5px
                 font-size 16px
                 text-indent 15px
             &:first-child
-                margin-top 5px
+                margin-top 0px
             &:last-child
-                margin-bottom 5px
+                margin-bottom 0px
 
             &:hover 
                 background-color corange1
