optimize backdrop for moz

--- a/src/static/stylus/chat.module.styl
+++ b/src/static/stylus/chat.module.styl
@@ -1,5 +1,10 @@
 @require 'common.styl'
 
+@-moz-document url-prefix(){
+    .chat {
+        background-color oshadow
+    }
+}
 .chat
     display flex
     flex-direction column
