--- a/src/static/stylus/chat.module.styl
+++ b/src/static/stylus/chat.module.styl
@@ -12,7 +12,7 @@
     position relative
     width 340px
     height 100%
-    backdrop-filter: drop-shadow(16px 16px 20px white) invert(10%) blur(10px)
+    backdrop-filter drop-shadow(16px 16px 20px white) invert(10%) blur(10px)
     box-shadow shadow1
     z-index 201
     transition-duration 0.2s 
