fix white screen

--- a/src/static/stylus/app.module.styl
+++ b/src/static/stylus/app.module.styl
@@ -3,7 +3,7 @@
     height 200%
     min-height -moz-available
     min-height -webkit-fill-available
-    min-height fill-available
+    min-height stretch
     max-height 100vh
 
 .page
