--- a/src/static/stylus/formElements.module.styl
+++ b/src/static/stylus/formElements.module.styl
@@ -7,6 +7,7 @@
     background-color cwhite1
     box-sizing border-box
     border 2px solid rgba(0,0,0,0)
+    font-size 15px
     &:focus-within
         border 2px solid corange2
     & > input
@@ -37,57 +38,29 @@
             fill corange2
 .select 
     position relative
-    & > :nth-child(1)
-        height 22px
-        border-top-left-radius 6px 
-        border-top-right-radius 6px 
-        width auto
-        padding 10px   
-        text-indent 15px
-        cursor pointer
+    height 42px
+    border-top-left-radius 6px 
+    border-top-right-radius 6px 
+    font-size 15px
+    width 100%
+    padding 10px   
+    cursor pointer
+    background-color cwhite1
+    text-align left
+    font-weight 300
+    outline none
+    border 2px solid rgba(0,0,0,0)
+    & > option
         background-color cwhite1
-        text-align left
-        font-weight 300
-        font-size 16px
-    & > :nth-child(2)
-        position absolute
-        max-height 200px
-        overflow scroll
-        width 100%
-        z-index 102
-        border-bottom-left-radius 6px 
-        border-bottom-right-radius 6px 
-        box-shadow shadow1
-        background-color cwhite1
-        & > button 
-            cursor pointer
-            display block
-            border-radius 0px
-            border none 
-            outline none
-            text-align left
-            font-weight 300
-            font-size 16px
-            width 100%
-            height 42px
-            padding 10px  
-            background-color cwhite1
-            border-top 1px solid cgray3
-            &:hover
-                background-color corange1
-        & > :last-child
-            border-bottom-left-radius 6px 
-            border-bottom-right-radius 6px 
-        &::-webkit-scrollbar
-            width 0px
-    & > input 
-        display none
+    &:focus-within
+        border 2px solid corange1
 
 .number
     position relative
     min-height 42px
     box-sizing border-box
     padding 12px 0
+    font-size 15px
     label 
         cursor pointer
         input
