add infoBlock, fix css and more

--- a/src/static/stylus/canvas.module.styl
+++ b/src/static/stylus/canvas.module.styl
@@ -156,6 +156,22 @@
 
 
 
+.info
+    position relative
+    z-index 2
+    height auto
+    width 322px
+    padding 10px 20px
+    margin 14px
+    background-color cwhite1
+    box-sizing border-box
+    border-radius 6px
+    & > div
+        padding 5px
+        display flex
+        justify-content space-between
+    @media all and (max-width 940px)
+        display none
 
 
 .ruler24 > ol > li 
