--- a/src/static/stylus/lobby.module.styl
+++ b/src/static/stylus/lobby.module.styl
@@ -22,6 +22,7 @@
         & > :nth-child(3) //button "create room"
             flex 0 0 152px
             margin-right 18px
+            height 42px
     & > :nth-child(2)
         position relative
         height calc(100% - 40px)
@@ -126,3 +127,5 @@
                         display none
                     & > :nth-child(2)
                         display block
+                        & > :nth-child(2)
+                            fill cwhite1
