--- a/src/static/stylus/room.module.styl
+++ b/src/static/stylus/room.module.styl
@@ -6,22 +6,16 @@
     display block
     position relative
     overflow hidden
-    & > button
+    & > button:nth-child(1) 
         height 42px
-        width 340px
         margin 40px
+        width 340px
     & > :nth-child(2) 
         z-index 0
 .match
     height 100%
-    position relative
-.info
-    position relative
-    bottom 70px
-    left 14px
-    z-index 2
-    height 42px
-    width 312px
+    left 0
+    top 0
     
 .btnToLobby
     position absolute
@@ -29,7 +23,7 @@
     left 14px
     z-index 2
     height 42px
-    width 312px
+    width 340px
     outline none
     border none
     cursor pointer
