--- a/src/static/stylus/score.module.styl
+++ b/src/static/stylus/score.module.styl
@@ -2,8 +2,7 @@
 
 .score
     position relative
-    top 14px
-    left 14px
+    margin 14px
     width 312px
     z-index 2
     overflow scroll
@@ -12,6 +11,7 @@
     border-radius 6px
     padding 5px   
     @media all and (max-width 940px)
+        position absolute
         left 10px
         top 10px
         width calc(100% - 94px)
