--- a/src/static/stylus/roomInfo.module.styl
+++ b/src/static/stylus/roomInfo.module.styl
@@ -1,5 +1,4 @@
 @require 'common.styl'
-
 .roomInfo
     display block
     position absolute
@@ -15,7 +14,7 @@
         width calc(100vw - 10px)
         left 5px
         top 5px
-        height calc(100vh - 68px)
+        height calc(100% - 10px)
     & > :nth-child(1) //header
         position relative
         width auto
@@ -38,10 +37,9 @@
             overflow scroll
             margin 0px 10px
             scrollbar-width thin
-            @media all and (max-width 489px)
-                height calc(100% - 120px)
             @media all and (max-width 810px)
-                flex 10 1
+                height auto
+                flex-shrink 1
                 flex-direction column
             & > :nth-child(1)
                 position relative
@@ -66,7 +64,7 @@
                     margin-bottom 10px
 
             & > :nth-child(3)
-                flex 1 1
+                flex 1 0
                 margin 0px 10px 0px 10px
                 & > :first-child
                     margin-top 10px
@@ -85,7 +83,7 @@
             display flex
             flex-wrap wrap
             @media all and (max-width 810px)
-                flex 1 0
+                flex-shrink 0
                 height auto
             & > *
                 margin 10px 0px 10px 20px
