css add underline to infoBlock

--- a/src/static/stylus/canvas.module.styl
+++ b/src/static/stylus/canvas.module.styl
@@ -170,6 +170,9 @@
         padding 5px
         display flex
         justify-content space-between
+        color cblack3
+        & > span
+            text-decoration underline solid cblack3
     @media all and (max-width 940px)
         display none
 
