--- a/src/static/stylus/main.module.styl
+++ b/src/static/stylus/main.module.styl
@@ -97,10 +97,12 @@
     box-sizing border-box
     padding 0px 126px
     border-top-left-radius 100px
-    animation imgA 2s 
+    animation-name imgA
+    animation-duration 2s 
     @media all and (max-width 700px)
         padding 0
     @media all and (max-width 1160px)
+        animation-name none
         width 100vw
         position relative
         height auto
