--- a/src/static/stylus/chat.module.styl
+++ b/src/static/stylus/chat.module.styl
@@ -108,6 +108,7 @@
         height 100%
         top 0px
         right -340px
+        background-color oshadow
     @media all and (max-width 500px)
         width 100%
     &.chatDisplay
