--- a/src/static/stylus/leftbar.module.styl
+++ b/src/static/stylus/leftbar.module.styl
@@ -19,6 +19,7 @@
         top 0px
         opacity 0
         visibility hidden
+        background-color oshadow
     &.leftbarDisplay
         @media all and (max-width 760px)
             opacity 1
