fix ws.stateReady, improved css and text in manuals,

--- a/src/static/stylus/roomInfo.module.styl
+++ b/src/static/stylus/roomInfo.module.styl
@@ -50,7 +50,7 @@
                 flex 1 1
                 margin 0px 10px 0px 10px
 
-            & > div
+            & > *
                 &:before
                     display none
                     content ''
