--- a/src/static/stylus/formElements.module.styl
+++ b/src/static/stylus/formElements.module.styl
@@ -8,6 +8,7 @@
     box-sizing border-box
     border 2px solid rgba(0,0,0,0)
     font-size 15px
+    user-select none
     &:focus-within
         border 2px solid corange2
     & > input
@@ -50,6 +51,7 @@
     font-weight 300
     outline none
     border 2px solid rgba(0,0,0,0)
+    user-select none
     & > option
         background-color cwhite1
     &:focus-within
@@ -61,6 +63,7 @@
     box-sizing border-box
     padding 12px 0
     font-size 15px
+    user-select none
     label 
         cursor pointer
         input
@@ -83,6 +86,7 @@
 .checkbox
     position relative
     padding 6px 0 6px 0
+    user-select none
     label 
         cursor pointer
         input 
@@ -107,6 +111,7 @@
     outline none
     border 2px solid rgba(0,0,0,0)
     box-sizing border-box
+    user-select none
     &:focus
         border 2px solid corange2
         background-color cwhite1
