--- a/src/static/stylus/manual.module.styl
+++ b/src/static/stylus/manual.module.styl
@@ -7,37 +7,67 @@
     left calc(50% - 540px)
     top 58px
     overflow scroll
-    box-sizing border-box
-    padding 40px 
     scrollbar-width thin
     background-color cwhite3
     z-index 501
     @media all and (max-width 1090px)
         width calc(100vw - 10px)
         left 5px
-        padding 20px 5px 20px 5px
-    & > p  
+    &  section 
+        padding 14px 40px 
+        &:last-child
+            padding-bottom 80px
+    &  p  
         margin-top 8px
         font-size 18px
         line-height 1.6em
-    & > ul
+        overflow hidden
+    &  ul
         margin-left 22px
         font-size 18px
         line-height 1.6em
+    &  h1 
+        font-size 30px
+        font-weight 700
+        padding 40px 10px 20px 10px
+        text-align center
+    &  h2
+        background-color cwhite3
+        position sticky
+        top 0px
+        padding 30px   
+        font-size 22px
+        text-decoration underline 
+    & .imgFloat
+        position relative
+        float right
+        width 250px
+        height 250px
+        margin 0 0 24px 24px
+        z-index -1
+        @media all and (max-width 620px)
+            float none
+            width auto
+            height auto
+            margin 24px
+    & .select 
+        color corange1
+        border-radius 3px
+        background-color cwhite1
+        padding 2px 6px
+        white-space nowrap
+    & .selectRed
+        white-space nowrap
+        text-decoration underline 
+        color red
+        
+
 .line 
     width 100%
     margin 4px auto
     border-radius 5px
     height 2px
     background-color cgray1
-.header1
-    font-size 30px
-    font-weight 700
-    padding 0px 0px 20px 0px
-    text-align center
-.header2
-    font-size 22px
-    margin 20px 20px 10px 0px
 .imgFull
     width 100%
     margin-top 10px
