fixed position for mobile topbar

--- a/src/static/stylus/alert.module.styl
+++ b/src/static/stylus/alert.module.styl
@@ -1,7 +1,7 @@
 @require 'common.styl'
 .alert
     height 42px
-    position absolute
+    position fixed
     width calc(100% - 340px)
     bottom 14px
     left 340px
