--- a/src/static/stylus/manual.module.styl
+++ b/src/static/stylus/manual.module.styl
@@ -3,9 +3,9 @@
 .manual 
     width 1080px
     height calc(100vh - 68px)
-    position absolute
+    position fixed
     left calc(50% - 540px)
-    top 58px
+    bottom 0
     overflow scroll
     scrollbar-width thin
     background-color cwhite3
