--- a/src/static/stylus/settings.module.styl
+++ b/src/static/stylus/settings.module.styl
@@ -7,9 +7,9 @@
 }
 .settings
     display block
-    position absolute
+    position fixed
     right 0
-    top 48px
+    bottom 0
     width 340px
     height calc(100% - 48px)
     backdrop-filter drop-shadow(16px 16px 20px white) invert(10%) blur(10px)
