--- a/src/static/stylus/app.module.styl
+++ b/src/static/stylus/app.module.styl
@@ -1,15 +1,8 @@
 @require 'common.styl'
-.fullpage
-    height 200%
-    min-height -moz-available
-    min-height -webkit-fill-available
-    min-height stretch
-    max-height 100vh
-
 .page
-    position absolute
-    left 0px
-    top 48px
+    position fixed
+    left 0
+    bottom 0
     display flex
     width 100vw 
     height calc(100% - 48px)
