--- a/src/static/stylus/popup.module.styl
+++ b/src/static/stylus/popup.module.styl
@@ -1,11 +1,11 @@
 @require 'common.styl'
 .popup
     display block
-    position absolute
-    left 0px
-    top 0px
+    position fixed
+    left 0
+    bottom 0
     width 100vw
-    height 100vh
+    height 100%
     background-color rgba(0, 0, 0, 0.6)
     cursor default
     z-index 500
