--- a/src/static/stylus/roomInfo.module.styl
+++ b/src/static/stylus/roomInfo.module.styl
@@ -1,7 +1,7 @@
 @require 'common.styl'
 .roomInfo
     display block
-    position absolute
+    position fixed
     top calc(50% - 250px) 
     left calc(50% - 400px)
     width 800px
@@ -13,7 +13,7 @@
     @media all and (max-width 810px)
         width calc(100vw - 10px)
         left 5px
-        top 5px
+        bottom 5px
         height calc(100% - 10px)
     & > :nth-child(1) //header
         position relative
