fixed position for mobile topbar #2

--- a/src/static/stylus/common.styl
+++ b/src/static/stylus/common.styl
@@ -26,6 +26,7 @@ IconBig = //42px
   cursor pointer
   border-radius 30px
   border 2px solid rgba(0,0,0,0)
+  user-select none
   & > svg 
     width 24px
     height 24px
@@ -47,6 +48,7 @@ IconMedium = //42px (topbar)
   height 42px
   cursor pointer
   box-sizing border-box
+  user-select none
   & > svg 
     width 24px
     height 24px
@@ -62,6 +64,7 @@ IconSmall = //30px (topbar)
   cursor pointer
   border 2px solid rgba(0,0,0,0)
   box-sizing border-box
+  user-select none
   & > svg 
     width 24px
     height 24px
