--- a/src/static/stylus/manual.module.styl
+++ b/src/static/stylus/manual.module.styl
@@ -2,10 +2,10 @@
             
 .manual 
     width 1080px
-    height calc(100vh - 68px)
+    height calc(100vh - 58px)
     position fixed
     left calc(50% - 540px)
-    bottom 0
+    bottom 5px
     overflow scroll
     scrollbar-width thin
     background-color cwhite3
