--- a/src/static/stylus/room.module.styl
+++ b/src/static/stylus/room.module.styl
@@ -12,6 +12,8 @@
         width 340px
     & > :nth-child(2) 
         z-index 0
+        @media (max-width 810px)
+            height calc(100% - 58px)
 .match
     height 100%
     left 0
