--- a/src/static/stylus/room.module.styl
+++ b/src/static/stylus/room.module.styl
@@ -10,7 +10,7 @@
         height 42px
         margin 40px
         width 340px
-    & > :nth-child(2) 
+    & > div:nth-child(2) 
         z-index 0
         @media (max-width 810px)
             height calc(100% - 58px)
