--- a/src/static/stylus/roomInfo.module.styl
+++ b/src/static/stylus/roomInfo.module.styl
@@ -40,7 +40,7 @@
             scrollbar-width thin
             @media all and (max-width 810px)
                 height auto
-                flex-shrink 1
+                flex 1 1
                 flex-direction column
             & > :nth-child(1)
                 position relative
