--- a/src/static/stylus/manual.module.styl
+++ b/src/static/stylus/manual.module.styl
@@ -15,6 +15,8 @@
         left 5px
     &  section 
         padding 14px 40px 
+        @media (max-width 700px)
+            padding 14px 20px  
         &:last-child
             padding-bottom 80px
     &  p  
